Fix vertical alignment of Burger
Align Burger to vertical center of navbar.

--- a/static/global-style.scss
+++ b/static/global-style.scss
@@ -118,6 +118,8 @@ nav {
     #burger, #toggle {
         grid-column: 1;
         grid-row: 1;
+        display: grid;
+        align-items: center;
     }
     
     #burger {
